--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,7 +17,7 @@ h2{
 
   }
   h3{
-    @include font($size:3.5rem, $height: 4.5rem)
+    @include font($size:3.5rem, $height: 130%)
   }
   h4{
     @include font($size:2rem, $height: 2.3rem)
