--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -451,7 +451,7 @@ h3 {
   font-size: 3.5rem;
   font-weight: 400;
   font-style: normal;
-  line-height: 4.5rem;
+  line-height: 130%;
 }
 
 h4 {
@@ -544,6 +544,41 @@ h5 {
 .main-screen__wrapper {
   display: flex;
   justify-content: center;
+}
+
+.about__wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.about__content {
+  max-width: 430px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 94px;
+  margin-left: 120px;
+}
+
+.about__title {
+  max-width: 370px;
+  letter-spacing: 0.2rem;
+  margin: 0;
+  margin-top: 1px;
+  margin-left: 1px;
+}
+
+.about__img {
+  margin-top: 80px;
+}
+
+.about__text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 160%;
+  margin: 0;
+  margin-top: 24px;
 }
 
 .header__navigation {
