--- a/src/sass/abstract/_mixin.scss
+++ b/src/sass/abstract/_mixin.scss
@@ -4,3 +4,11 @@
     font-style: $style;
     line-height: $height;
 }
+@mixin column ($width){
+    display: flex;
+    //flex-wrap: wrap;
+    justify-content: space-between;
+    >* {
+        flex-basis: $width;
+    }
+}
