--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -484,6 +484,9 @@ h5 {
   background-color: #FAFAFA;
   border-color: #FDDCC4;
 }
+.button__slider {
+  width: 261px;
+}
 .button:hover {
   background-color: #F1CDB3;
   cursor: pointer;
@@ -549,6 +552,7 @@ h5 {
 .about__wrapper {
   display: flex;
   justify-content: center;
+  padding-bottom: 100px;
 }
 
 .about__content {
@@ -579,6 +583,50 @@ h5 {
   line-height: 160%;
   margin: 0;
   margin-top: 24px;
+}
+
+.slider__card {
+  max-width: 270px;
+  height: 435px;
+  background-color: #FAFAFA;
+  margin-bottom: 45px;
+  margin-right: 45px;
+}
+
+.card_name {
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 2.3rem;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.slider__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #F6F6F6;
+  padding-bottom: 100px;
+}
+
+.slider__title {
+  max-width: 400px;
+  letter-spacing: 0.06rem;
+  padding-top: 80px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.slider__arrow-left, .slider__arrow-right {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100%;
+  text-align: center;
+  padding-top: 18px;
 }
 
 .header__navigation {
@@ -624,6 +672,12 @@ h5 {
 .wrapper {
   width: 1276px;
   margin: 0 auto;
+}
+
+.layout-5-column {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
