--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -492,6 +492,38 @@ h5 {
   cursor: pointer;
 }
 
+.help__row1, .help__row2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.help__row1 {
+  width: 980px;
+  margin-left: 64px;
+  margin-bottom: 78px;
+}
+
+.help__row2 {
+  width: 802px;
+  margin-left: 50px;
+}
+
+.row2_cont, .row1_cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.ico-name {
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 115%;
+  letter-spacing: 0.06rem;
+}
+
 .logo {
   display: flex;
   flex-direction: column;
@@ -603,6 +635,19 @@ h5 {
   margin-bottom: 30px;
 }
 
+.help__wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.help__title {
+  max-width: 308px;
+  text-align: center;
+  align-items: center;
+}
+
 .slider__wrapper {
   display: flex;
   flex-direction: column;
@@ -627,6 +672,10 @@ h5 {
   border-radius: 100%;
   text-align: center;
   padding-top: 18px;
+}
+
+.slider__arrow-left {
+  margin-right: 45px;
 }
 
 .header__navigation {
