--- a/src/sass/components/_help.scss
+++ b/src/sass/components/_help.scss
@@ -3,9 +3,13 @@
 justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 100px;
+    padding-top: 80px;
 }
 .help__title{
     max-width: 308px;
     text-align: center;
     align-items: center;
+    margin-top: 0;
+    margin-bottom: 60px;
 }
