--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -429,6 +429,10 @@ html {
   font-size: 10px;
 }
 
+body {
+  color: #545454;
+}
+
 h1 {
   letter-spacing: 6%;
   font-size: 3.2rem;
@@ -635,17 +639,71 @@ h5 {
   margin-bottom: 30px;
 }
 
+.donation__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+}
+
+.donation__content {
+  width: 380px;
+  padding-left: 30px;
+}
+
+.donation__img {
+  padding-top: 92px;
+  padding-bottom: 111px;
+}
+
+.donation_title {
+  width: 300px;
+  letter-spacing: 0.06em;
+  margin: 0;
+  color: #545454;
+}
+
+.donation_subtitle {
+  margin: 0;
+  margin-top: 20px;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+
+.donation_text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-style: italic;
+  line-height: 18px;
+  color: #B2B2B2;
+}
+
+.donation__number {
+  width: 349px;
+  height: 43px;
+  padding: 10px 0px 0px 15px;
+  background: #F1CDB3;
+  border-radius: 9px;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+}
+
 .help__wrapper {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 100px;
+  padding-top: 80px;
 }
 
 .help__title {
   max-width: 308px;
   text-align: center;
   align-items: center;
+  margin-top: 0;
+  margin-bottom: 60px;
 }
 
 .slider__wrapper {
