feat add footer

--- a/src/sass/components/_donation.scss
+++ b/src/sass/components/_donation.scss
@@ -1,8 +1,11 @@
+.donation{
+
+    background-color: $color-bg-light;
+}
 .donation__wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $color-bg-light;
 }
 .donation__content{
     width: 380px;
