--- a/src/sass/base/_icon.scss
+++ b/src/sass/base/_icon.scss
@@ -24,3 +24,11 @@
     @include font($size:2rem, $height: 115%);
     letter-spacing: 0.06rem;
 }
+.ico__mail{
+
+    width: 40px;
+    height: 26px;
+display: inline-block;
+text-align: center;
+    background-repeat: no-repeat;
+}
