--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,8 +1,11 @@
+.slider{
+    background: $color-bg-light;
+}
 .slider__wrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: $color-bg-light;
+
     padding-bottom: 100px;
 }
 .slider__title{
@@ -25,6 +28,10 @@ text-align: center;
     border-radius: 100%;
     text-align: center;
     padding-top:18px ;
+    &:hover{
+    cursor: pointer;
+    background-color: $color-primary-dark;}
+    @extend %transition;
 }
 .slider__arrow-left{
     margin-right: 45px;
