--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -10,4 +10,7 @@ $color-linked:#FAFAFA;
 $color-link:#CDCDCD;
 
 
-$content-width:1276px;
+$content-width:1280px;
+$tablet-width: 768px;
+$mobile-big-width: 414px;
+$mobile-small-width: 320px;
