--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import "base/button";
 @import "base/icon";
 @import "base/logo";
+@import "base/pagination";
 
 @import "components/main-screen";
 @import "components/about";
