--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -1,4 +1,5 @@
 .button{
+
 padding: 15px 45px;
     width: 207px;
     height: 52px;
@@ -10,6 +11,8 @@ padding: 15px 45px;
           background-color: $color-primary;
     }
     &_bordered{
+        width: 187px;
+        letter-spacing:  0.075rem;
         background-color: $color-linked;
         border-color: $color-primary;
 
@@ -22,4 +25,8 @@ padding: 15px 45px;
         cursor: pointer;
         @extend %transition
     }
+}
+.disabled{
+    border-color:$color-text;
+    background-color: lawngreen;
 }
