--- a/src/sass/base/_icon.scss
+++ b/src/sass/base/_icon.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
 
+
 }
 .help__row1{
        width: 980px;
@@ -31,4 +32,7 @@
 display: inline-block;
 text-align: center;
     background-repeat: no-repeat;
+}
+.ico{
+    margin-right: 21px;
 }
