--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,31 +1,76 @@
-.about__wrapper{
+.about {
+  padding-top: 80px;
+  padding-bottom: 10rem;
+  @include media-mobilesmall {
+    padding-top: 0px;
+  }
+  &__wrapper {
     display: flex;
-    justify-content: center;
-padding-bottom: 100px;
+    width: 50%;
+    justify-content: space-between;
+    padding: 8rem 17.5rem 10rem 17.5rem;
+    @include media-tablet {
+      flex-direction: column-reverse;
+      width: 71%;
+    }
+    @include media-mobilesmall {
+      padding: 0px;
+      margin: 0;
+    }
+  }
+  &__image-wrapper {
+    display: flex;
+    margin-left: -1px;
+    @include media-tablet {
+      max-width: 300px;
+      min-height: 400px;
+    }
+    @include media-mobilesmall {
+      max-width: 260px;
+      min-height: 353px;
+    }
+  }
+  &__img {
+    width: 100%;
+    @include media-tablet {
+      margin-top: 80px;
+      margin-left: 69px;
+    }
+    @include media-mobilesmall {
+      margin-left: 30px;
+      margin-top: 42px;
 
-}
-.about__content{
+    }
+    //
+  }
+  &__content {
     max-width: 430px;
     display: flex;
     flex-direction: column;
-    margin-top: 94px;
-    margin-left: 120px;
-
-}
-.about__title{
+    justify-content: center;
+    @include media-mobilesmall {
+      max-width: 270px;
+    }
+  }
+  &__title {
     max-width: 370px;
     letter-spacing: 0.2rem;
-   margin: 0;
-   margin-top: 1px;
-    margin-left: 1px;
+    margin: 0;
 
-}
-.about__img{
-    margin-top: 80px;
-}
-.about__text{
+    margin-left: 1px;
+    @include media-mobilesmall {
+      text-align: center;
+    }
+  }
+  //
+  &__text {
     font-family: Arial, Helvetica, sans-serif;
-    @include font($size:1.5rem, $height: 160%);
+    @include font($size: 1.5rem, $height: 160%);
     margin: 0;
     margin-top: 24px;
+    @include media-mobilesmall {
+      text-align: justify;
+      margin-left: 12;
+    }
+  }
 }
