--- a/src/sass/components/_help.scss
+++ b/src/sass/components/_help.scss
@@ -1,10 +1,12 @@
-.help__wrapper{
+.help{
     display: flex;
 justify-content: center;
     flex-direction: column;
     align-items: center;
+
     padding-bottom: 100px;
     padding-top: 80px;
+
 }
 .help__title{
     max-width: 308px;
